k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coursevt
  namespace: coursevt
  labels:
    app: coursevt
spec:
  selector:
    app: coursevt
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
