k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coursevt
  namespace: coursevt
  labels:
    app: coursevt
spec:
  ingressClassName: nginx
  rules:
    - host: coursevt.traefik.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coursevt
                port:
                  number: 80
